--- a/custom-section-name/custom-section-name.vm
+++ b/custom-section-name/custom-section-name.vm
@@ -1,3 +1,6 @@
+## Copyright (C) 2018 The Trustees of Indiana University
+## SPDX-License-Identifier: BSD-3-Clause
+
 ## Velocity format for your custom section.
 
 ## Save this file to `_internal/velocity/custom-sections`. 
